cupt (2.10.0~) UNRELEASED; urgency=low

  * lib:
    - config:
      - New option 'cupt::console::warnings::removal-of-essential'.
      - Don't ask dpkg for architectures if the 'apt::architecture' option
        was already set via configuration file.
      - New method 'getConfigurationPartPaths'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 28 Sep 2016 13:10:13 +0200

cupt (2.9.8) unstable; urgency=high

  * lib:
    - cache:
      - Verifying repository signatures: ported to gpgv v2.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 04 Oct 2016 08:40:30 +0200

cupt (2.9.7) unstable; urgency=medium

  * lib:
    - cache/relation:
      - ArchitecturedRelation: don't choke on build profiles.
  * debian:
    - cupt.dirs:
      - Don't create empty and obsolete /etc/bash_completion.d/ directory.
      - Don't create /usr/bin, it's created automatically by install targets.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 02 Oct 2016 16:59:13 +0200

cupt (2.9.6) unstable; urgency=medium

  * cmakelists:
    - Detect a GCC6 lambda capture optimisation bug (#838438), and lower the
      optimization level if found. This avoids miscompilation on armel/armhf.
      (Closes: #836588)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 23 Sep 2016 10:48:07 +0200

cupt (2.9.5) unstable; urgency=medium

  * test:
    - TestCupt:
      - Make sure APT_CONFIG environment variable is not pre-set. Fixes FTBFS
        if the building tool or environment uses APT_CONFIG for own purposes
        (like newer sbuild). Patch by Adam Conrad, thanks! (Closes: #819605).
  * debian
    - control:
      - Bumped Standards-Version to 3.9.8, no changes needed.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 19 Jun 2016 16:39:02 +0200

cupt (2.9.4) unstable; urgency=medium

  * debian/rules:
    - Fixed calling CMake's install before trying to copy translation files to
      a target package (Closes: #806010).
